@@ -1,3 +1,6 @@
+2003-01-08	blytkerchan
+	* poll.pl: rename base_url to response_url
+
 2003-01-07	blytkerchan
 	* poll_response.pl: new experimental implementation..
 
